[gd_scene load_steps=21 format=2]

[ext_resource path="res://asserts/player/shell/back_shell.png" type="Texture" id=1]
[ext_resource path="res://scene + script/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://asserts/player/shell/front_shell.png" type="Texture" id=3]
[ext_resource path="res://asserts/player/player_core.png" type="Texture" id=4]
[ext_resource path="res://asserts/light.png" type="Texture" id=5]
[ext_resource path="res://asserts/player/player_core_normal_map.png" type="Texture" id=6]
[ext_resource path="res://asserts/particle/star_08.png" type="Texture" id=7]
[ext_resource path="res://scene + script/Hit and Hurt Box/Hurt Box.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 70.8309

[sub_resource type="Animation" id=2]
resource_name = "left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_core:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player_core:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Curve" id=5]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 53.7843 ), 0.0, 423.074, 0, 0, Vector2( 1, -50.943 ), 316.586, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.117647, 0, 0.498039 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.82706 ), 0.0, -1.20655, 0, 0, Vector2( 1, 0.754545 ), 1.41039, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity_curve = SubResource( 6 )
orbit_velocity = 0.5
orbit_velocity_random = 0.0
scale = 0.2
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[sub_resource type="CircleShape2D" id=12]
radius = 74.6009

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -71.2927 ],
"_edit_vertical_guides_": [ 70.9994 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="back_shell" type="Sprite" parent="."]
scale = Vector2( 0.175, 0.175 )
texture = ExtResource( 1 )

[node name="player_core" type="Sprite" parent="."]
scale = Vector2( 0.175, 0.175 )
texture = ExtResource( 4 )
normal_map = ExtResource( 6 )
hframes = 10
frame = 9

[node name="front_shell" type="Sprite" parent="."]
scale = Vector2( 0.175, 0.175 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/left = SubResource( 2 )
anims/right = SubResource( 3 )

[node name="Player_Wepon" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 4 )
position = Vector2( 100, -40 )
amount = 4
lifetime = 6.0
randomness = 1.0
process_material = SubResource( 11 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="Player_Wepon"]
position = Vector2( -1.36383, -0.0445328 )
texture = ExtResource( 5 )
texture_scale = 1.5

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( 100, -40 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( -100, -40 )

[node name="Timer" type="Timer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 8 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
